spacing fix for multiple dl

--- a/assets/styles/components/dl.scss
+++ b/assets/styles/components/dl.scss
@@ -43,3 +43,7 @@ dl {
     }
   }
 }
+
+dl + dl {
+  margin-top: 20px;
+}
